# dslab2

./: .gitignore  Architecture_Proposal.docx  DAG_SDN_Mobility_Documentation.docx  FINAL_PROJECT_SUMMARY.md  NSGA2_MMDE_TOF_Documentation.docx  PCNME_Methodology_Complete.tex  Papers_6_to_10_Review.docx  QUICK_START.md  README.md  Worked_Example_TOF_MMDE_NSGA2.docx  debug_t_exit.py  dslab2 papers.xlsx  jetbrain explanation.md  porject.md  requirements.txt  test_verification.py  ~$GA2_MMDE_TOF_Documentation.docx
Freamwork/: .env.example  README.md  pyproject.toml
Freamwork/case_studies/istanbul/: config.yaml
Freamwork/frontend/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
Freamwork/frontend/src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
Freamwork/pcnme/: __init__.py
Freamwork/pcnme/agents/: __init__.py  agent1.py  agent2.py  bc.py  dqn.py  features.py  torch_support.py
Freamwork/pcnme/broker/: __init__.py  aggregator.py  tof_broker.py
Freamwork/pcnme/cli/: main.py
Freamwork/pcnme/core/: __init__.py  config.py  enums.py  task.py  topology.py  vehicle.py
Freamwork/pcnme/datasets/: __init__.py  synthetic.py
Freamwork/pcnme/mobility/: __init__.py  buffers.py  handoff.py  predictor.py
Freamwork/pcnme/optimizer/: __init__.py  nsga2_mmde.py  pareto.py  pretrain.py  problem.py
Freamwork/pcnme/runtime/: __init__.py  app.py
Freamwork/tests/: test_agents_datasets.py  test_aggregator.py  test_pareto_knee.py  test_predictor.py  test_problem_and_mmde.py  test_simulation_engine.py  test_tof_broker.py
pcnme/: .env  (+17 more)
(+216 files in other folders)
